files/deployments/chirpstack-gateway-bridge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: chirpstack-gateway-bridge
  name: chirpstack-gateway-bridge
  namespace: chirpstack
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chirpstack-gateway-bridge
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: chirpstack-gateway-bridge
    spec:
      containers:
      - image: chirpstack/chirpstack-gateway-bridge:4.0
        imagePullPolicy: ""
        name: chirpstack-gateway-bridge
        ports:
        - containerPort: 1700
          protocol: UDP
        volumeMounts:
          - name: config-gateway-bridge-cm
            mountPath: /etc/chirpstack-gateway-bridge
          
      restartPolicy: Always
    
      volumes:
          - name: config-gateway-bridge-cm
            configMap:
                name: config-gateway-bridge
