files/deployments/mosquitto-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
  namespace: chirpstack
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: mosquitto
  template:
    metadata:
      labels:
        io.kompose.service: mosquitto
    spec:

      containers:
      - image: eclipse-mosquitto:latest
        name: mosquitto
        ports:
        - containerPort: 8883
        volumeMounts:
        - name: mosquitto-config
          mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
        - name: mosquitto-data
          mountPath: /mosquitto/data
        - name: mosquitto-logs
          mountPath: /mosquitto/log

      restartPolicy: Always
      volumes:
      - name: mosquitto-certs
        secret:
          secretName: mqtt-tls-secret 
          defaultMode: 0444
      - name: mosquitto-config
        configMap:
          name: mosquitto-configmap
      - name: mosquitto-data
        persistentVolumeClaim:
          claimName: mosquitto-data
      - name: mosquitto-logs
        persistentVolumeClaim:
          claimName: mosquitto-logs
