files/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chirpstack-ingress1
  namespace: chirpstack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: DNS_NAME
      http:
        paths:
          - path: "/(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: chirpstack-core
                port:
                  number: 8080 
          - path: "/mqtt/"
            pathType: Prefix
            backend:
              service:
                name: mosquitto
                port:
                  number: 8883
  tls:
    - hosts:
        - DNS_NAME
      secretName: DNS_NAME
